--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -37,7 +37,7 @@ VQ-VAE:
     lf: 32
     hf: 32
   decay: 0.99
-  commitment_weight: 0.25
+  commitment_weight: 0.
   codebook_dim: 64
   emb_dropout: 0.1
   perceptual_loss_weight: 0
