--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -4,6 +4,7 @@ dataset:
   batch_sizes:
     stage1: 128
     stage2: 256
+    stage3: 256
   num_workers: 0
 
 exp_params:
@@ -14,7 +15,7 @@ trainer_params:
   max_epochs:
     stage1: 2000
     stage2: 10000
-
+    stage3: 2000
 
 encoder:
   dim: 64
@@ -59,3 +60,14 @@ MaskGIT:
 
 class_guidance:
   guidance_scale: 1.
+
+domain_shifter:
+  stochastic_sampling: 1
+  dim: 8
+  dim_mults:
+    - 1
+    - 2
+    - 4
+    - 8
+  resnet_block_groups: 4
+  attention_ups_downs: False
