+custom dataset sampling notebook; enable using a custom dataset; +minimal code for sampling; update CAS; ; update requirements.txt; flexible snake activation; incremental-memory-efficient Eec and Dec; x_recons=D(Q(E(x))) ; +mini_rocket for percept_loss for FE; +cosine annealing w/ linear warmup; deprecate ESS;

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,11 @@
 einops
-matplotlib
 numpy
-pandas
-torch
-pytorch_lightning
-PyYAML
-Requests
-scikit_learn
-scipy
-supervised_fcn
-x_transformers
+matplotlib
+scikit-learn
 wandb
+pandas
+supervised-fcn-2
+numba
+x-transformers==1.31.6
+torch==2.3.1
+pytorch-lightning==2.3.1
