--- a/configs/config_cas.yaml
+++ b/configs/config_cas.yaml
@@ -1,13 +1,12 @@
 dataset:
   in_channels: 1
+  data_scaling: True
   batch_size: 256
   num_workers: 0
 
 exp_params:
-  LR: 0.001  # learning rate
-  weight_decay: 0.00001
+  lr: 0.001  # learning rate
 
 trainer_params:
-  gpus:
-    - 0
-  max_epochs: 1000
+  max_steps: 5000
+  val_check_interval: 500
