--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -14,12 +14,12 @@ exp_params:
 trainer_params:
   max_steps:
     stage1: 50000  # 50000
-    stage2: 50000
-    stage_fid_enhancer: 10000
+    stage2: 200000  #50000
+    stage_fid_enhancer: 50000
   val_check_interval:
     stage1: 5000
-    stage2: 5000
-    stage_fid_enhancer: 100
+    stage2: 20000  #5000
+    stage_fid_enhancer: 2500
 
 encoder:
   dim: 128
@@ -39,12 +39,12 @@ VQ-VAE:
     hf: 32
 
 MaskGIT:
-  choice_temperatures: # for masking
-    lf: 4
-    hf: 4
-  T: 
+  choice_temperatures: # higher temp -> higher sample diversity
     lf: 10
-    hf: 10
+    hf: 4
+  T:  # num sampling (iterative decoding) steps
+    lf: 10
+    hf: 1
   prior_model_l:
     hidden_dim: 128
     n_layers: 4
@@ -85,6 +85,8 @@ fidelity_enhancer:
     - 1
     - 2
     - 4
+  # tau_search_rng: 
+    # - 512
   percept_loss_weight: 0. #1000
 
 evaluation:
