--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -46,7 +46,8 @@ MaskGIT:
     hf: 1
   prior_model_l:
     hidden_dim: 128
-    n_layers: 4
+    n_enc_layers: 3
+    n_dec_layers: 1
     heads: 2
     ff_mult: 1
     use_rmsnorm: True
@@ -55,7 +56,8 @@ MaskGIT:
     emb_dropout: 0.3
   prior_model_h:
     hidden_dim: 32
-    n_layers: 1
+    n_enc_layers: 1
+    n_dec_layers: 1
     heads: 1
     ff_mult: 1
     use_rmsnorm: True
