--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,6 @@ wandb
 pandas
 supervised-fcn-2
 numba
-x-transformers==1.31.6
-torch==2.2.1
-pytorch-lightning==2.3.1
+# x-transformers==1.31.6
+# torch==2.2.1
+# pytorch-lightning==2.3.1
