--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 einops
-numpy
 matplotlib
-scikit-learn
-wandb
-pandas
-supervised-fcn-2
-numba
-# x-transformers==1.31.6
-# torch==2.2.1
-# pytorch-lightning==2.3.1
+numba==0.60.0
+numpy==2.1.3
+pandas==2.2.3
+# pytorch_lightning==2.4.0
+PyYAML==6.0.2
+scikit_learn==1.5.2
+scipy==1.14.1
+supervised_fcn_2==0.0.4
+# torch==2.5.1+cu118
